[package]
name = "sbr-sys"
version = "0.1.0"
authors = ["maciejkula <maciej.kula@gmail.com>"]

[lib]
crate-type = ["dylib"]

[features]
default = ["ndarray/blas", "blas-src", "blas-src/openblas", "openblas-src"]
# mkl = ["ndarray/blas", "blas-src", "blas-src/intel-mkl"]

[dependencies]
sbr = "0.1.0"
const-cstr = "0.3.0"
libc = "0.2.41"
itertools = "0.7.8"
ndarray = { version = "0.11.0", features = ["serde-1"] }
blas-src = { version = "0.1.2", optional = true }
openblas-src = { version = "0.5.6", default-features = false, features = ["static"], optional = true }
