[package]
name = "sbr-sys"
version = "0.2.0"
authors = ["maciejkula <maciej.kula@gmail.com>"]
description = "C bindings for sbr."
repository = "https://github.com/maciejkula/sbr-sys"
readme = "readme.md"
license = "MIT"

[badges]
travis-ci = { repository = "maciejkula/sbr-sys", branch = "master" }

[lib]
crate-type = ["cdylib"]

[features]
openblas = ["ndarray/blas", "blas-src", "blas-src/openblas", "openblas-src"]
mkl = ["ndarray/blas", "blas-src", "blas-src/intel-mkl"]
accelerate = ["ndarray/blas", "blas-src", "blas-src/accelerate"]

[dependencies]
sbr = "0.2.0"
const-cstr = "0.3.0"
bincode = "1.0.0"
libc = "0.2.41"
itertools = "0.7.8"
ndarray = { version = "0.11.0", features = ["serde-1"] }
blas-src = { version = "0.1.2", optional = true }
openblas-src = { version = "0.5.6", default-features = false, features = ["static"], optional = true }

[profile.release]
# Doesn't work with cgo on Darwin
lto = false
