[package]
name = "sbr-sys"
version = "0.3.4"
authors = ["maciejkula <maciej.kula@gmail.com>"]
description = "C bindings for sbr."
repository = "https://github.com/maciejkula/sbr-sys"
readme = "readme.md"
license = "MIT"

[badges]
travis-ci = { repository = "maciejkula/sbr-sys", branch = "master" }

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
openblas = ["ndarray/blas", "blas-src", "blas-src/openblas", "openblas-src"]
mkl = ["ndarray/blas", "blas-src", "blas-src/intel-mkl"]
accelerate = ["ndarray/blas", "blas-src", "blas-src/accelerate"]

[dependencies]
const-cstr = "0.3.0"
bincode = "1.0.0"
libc = "0.2.41"
itertools = "0.7.8"
ndarray = { version = "0.11.0", features = ["serde-1"] }
blas-src = { version = "0.1.2", optional = true }
openblas-src = { version = "0.5.6", default-features = false, features = ["static"], optional = true }

[dependencies.sbr]
version = "0.4.0"
default-features = false

[profile.release]
# Segfaults on OSX when enabled.
lto = false
